changed the dropdown from the icon so it aligns correct. left: 250px

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body{
     background-color: black;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 1);
+    left: 240px;
 }
 .dropdown-content a {
     font-family: 'Special Elite', cursive;
